--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <script>
     // ** IMPORTANTE: INSIRA SUA CHAVE DE API AQUI **
     const apiKey = "AIzaSyCIVxueaY-lw6Rd0mpv7xk0zMPC-f8NWJM"; 
-    const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+    const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${AIzaSyCIVxueaY-lw6Rd0mpv7xk0zMPC-f8NWJM}`;
 
     // A variável que vai armazenar o conhecimento da IA
     let knowledgeBaseContent = "";
@@ -208,4 +208,5 @@
     // Chama a função para carregar a base de conhecimento quando a página é carregada
     window.addEventListener('load', loadKnowledgeBase);
 </script>
+
 
